--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <a href="index.html">
-        <img src="/Baker/assets/img/zyka/Group 18 (white).png" alt="" class="logo">
+        <img src="/assets/img/zyka/Group 18 (white).png" alt="" class="logo">
       </a>
 
       <nav id="navbar" class="navbar">
