--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <a href="index.html">
-        <img src="/assets/img/zyka/Group 18 (white).png" alt="" class="logo">
+        <img src="assets/img/zyka/Group 18 (white).png" alt="" class="logo">
       </a>
 
       <nav id="navbar" class="navbar">
@@ -400,7 +400,7 @@
 
           <div class="col-lg-4 col-md-6 footer-contact">
             <a href="index.html">
-              <img src="/Baker/assets/img/zyka/Group 18.png" alt="" class="logo">
+              <img src="assets/img/zyka/Group 18.png" alt="" class="logo">
             </a>
             <p class="mt-3">
               Suite 13,Purple Stone Plaza. <br>
