--- a/services.html
+++ b/services.html
@@ -205,8 +205,8 @@
             <h4>Our Company</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="apply-now.html">Loan Application</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms & Condition</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="terms-condition.html">Terms & Condition</a></li>
             </ul>
           </div>
 
