--- a/terms-condition.html
+++ b/terms-condition.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Zyka Credit | About Us</title>
+  <title>Zyka Credit | Terms & Conditions</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -39,7 +39,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto active" href="about.html">About</a></li>
+          <li><a class="nav-link scrollto" href="about.html">About</a></li>
           <li><a class="nav-link scrollto" href="services.html">Services</a></li>
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="nav-link scrollto" href="apply-now.html">Apply Now</a></li>
@@ -57,10 +57,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>About Us</h2>
+          <h2>Terms & Conditions</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About Us</li>
+            <li>Terms & Conditions</li>
           </ol>
         </div>
 
@@ -74,28 +74,120 @@
 
             <div class="row">
                 <div class="row d-flex align-items-center">
-                  <div class="col-lg-6 col-sm-12 mb-3">
-                    <h3>Your Trusted Financial Partner</h3>
+                  <div class="col-lg-12 mb-3">
+                    <h3>Introduction</h3>
                   </div>
-                  <div class="col-lg-6 col-sm-12">
+                  <div class="col-lg-12">
                     <p>
-                      At Zyka Credit, we’re more than just a lending institution; We’re your dedicated financial partner on your journey to success. With a passion for financial empowerment and a commitment to our clients’ well-being.
+                      These Terms and Conditions govern your use of (www.zykacredit.com) loan website operated by Zyka Credit Limited.
                     </p>
                   </div>
                 </div>
-                <div class="row mt-5">
-                  <div class="col-md-6">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Financial Guidance and Education</h4>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Acceptance of Terms</h3>
+                  </div>
+                  <div class="col-lg-12">
                     <p>
-                      At Zyka Credit, we believe in empowering our clients with knowledge. Alongside offering loans, we provide valuable financial guidance and educational resources. Our aim is not only to lend but also to equip you with the tools and understanding to make informed financial decisions.
+                      By accessing or using the Service, you agree to be bound by these Terms. If you disagree with any part of the Terms, you may choose not to use the Service.
                     </p>
                   </div>
-                  <div class="col-md-6">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Customized Loan Solutions</h4>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Loan Application</h3>
+                  </div>
+                  <div class="col-lg-12">
                     <p>
-                      We understand that every financial situation is unique. That's why we specialize in crafting personalized loan solutions tailored to your specific needs. Whether it's a business expansion, personal investment, or unforeseen expenses, our expertise allows us to create loan packages that fit your individual circumstances.
+                      Our Service provides a platform to apply for loans. By submitting a loan application through our Service, you agree to provide accurate and complete information. We reserve the right to approve or deny loan applications based on our criteria and assessments.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Eligibility</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      To use our Service, you must be of legal age according to Nigerian laws and must not have been previously restricted or prohibited from using our Service.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4"> Use of Information</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      Information provided by you during the loan application process will be used in accordance with our Privacy Policy. You consent to the use of this information to assess your eligibility for a loan and for communication purposes related to your application.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Loan Terms</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      Upon approval, loan terms including interest rates, repayment schedules, and any associated fees will be provided to you. You agree to adhere to these terms and fulfill repayment obligations in accordance with the agreed-upon schedule.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Intellectual Property</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      The Service and its original content, features, and functionality are owned by [Your Company Name] and are protected by international copyright, trademark, patent, trade secret, and other intellectual property or proprietary rights laws.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Limitation of Liability</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      We strive to provide accurate and reliable information and services, but we do not guarantee the accuracy, reliability, or completeness of any information on the Service. We shall not be liable for any direct, indirect, incidental, consequential, or punitive damages arising out of your use or inability to use the Service.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Changes to Terms</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      We reserve the right to modify or replace these Terms at any time. The most current version of the Terms will supersede all previous versions. It is your responsibility to periodically review these Terms for any changes.
+                    </p>
+                  </div>
+                </div>
+
+
+                <div class="row d-flex align-items-center">
+                  <div class="col-lg-12 mt-3">
+                    <h3 class="fs-4">Contact Us</h3>
+                  </div>
+                  <div class="col-lg-12">
+                    <p>
+                      If you have any questions about these Terms, please contact us using the information provided in the Contact Us section on our website.
                     </p>
                   </div>
                 </div>
@@ -103,87 +195,7 @@
             </div>
 
           </div>
-        </section><!-- End About Section -->
-
-        <!-- ======= Counts Section ======= -->
-        <section id="counts" class="counts section-bg">
-          <div class="container">
-
-            <div class="row counters">
-
-              <div class="col-lg-3 col-6 text-center">
-                <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Clients</p>
-              </div>
-
-              <div class="col-lg-3 col-6 text-center">
-                <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Years in Business</p>
-              </div>
-
-              <div class="col-lg-3 col-6 text-center">
-                <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Hours Of Support</p>
-              </div>
-
-              <div class="col-lg-3 col-6 text-center">
-                <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-                <p>Licensed Officers</p>
-              </div>
-
-            </div>
-
-          </div>
-        </section><!-- End Counts Section -->
-
-        <section class="listing">
-          <div class="container mb-5">
-
-            <div class="game projects__card">
-              <div class="row align-items-center box">
-                <div class="col-lg-6 p-4">
-                  <img src="assets/img/zyka/Group 5.png" alt="" class="pipins">
-                </div>
-                <div class="col-lg-6 pt-4 pt-lg-0">
-                  <h2 class="fw-bold fs-2">Simplicity</h2>
-                  <p>
-                    We understand that navigating the financial world can be complex and overwhelming. That’s why we’ve made it our mission to simplify the borrowing experience. from our easy online application process to straightforward terms and conditions, we’re dedicated to making borrowing money a straightforward and stress-free process. 
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="game projects__card">
-              <div class="row align-items-center box mt-5">
-                <div class="col-lg-4 p-4">
-                  <img src="assets/img/zyka/Group 6.png" alt="" class="pipins">
-                </div>
-                <div class="col-lg-8 pt-4 pt-lg-0 order-lg-first">
-                  <h2 class="fw-bold fs-2">Trust</h2>
-                  <p>
-                    Trust is the foundation of our business. We know that when you turn to us for financial support, you’re placing your trust in our hands. We take this responsibility seriously and strive to be transparent, ethical, and reliable in all our interactions. Our teams of experts is here not just to provide loans but to guide and support you in achieving your financial goals.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-            <div class="game projects__card">
-              <div class="row align-items-center box mt-5">
-                <div class="col-lg-5 p-4">
-                  <img src="assets/img/zyka/Group 8.png" alt="" class="pipins">
-                </div>
-                <div class="col-lg-7 pt-4 pt-lg-0">
-                  <h2 class="fw-bold fs-2">Your Financial Growth</h2>
-                  <p>
-                    Your financial success is our success. We’re not just here to provide loans; We’re here to help you achieve your dreams. Whether you’re looking t0 start a business, purchase a home, further your education, or consolidate debt, we have the tools, resources, and expertise to help you grow financially and achieve your goals.
-                  </p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </section>      
-
+        </section><!-- End About Section -->    
 
     </section>
 
