--- a/apply-now.html
+++ b/apply-now.html
@@ -79,40 +79,38 @@
                 <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                     <div class="row">
                         <div class="col-md-6 form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="First Name" required>
+                            <input type="text" name="first_name" class="form-control" id="name" placeholder="First Name" required>
                         </div>
                         <div class="col-md-6 form-group mt-3 mt-md-0">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Last Name" required>
+                            <input type="text" name="last_name" class="form-control" id="name" placeholder="Last Name" required>
                         </div>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="number" class="form-control" name="subject" id="subject" placeholder="BVN Number" required>
+                        <input type="number" class="form-control" name="bvn" id="subject" placeholder="BVN Number" required>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="tel" class="form-control" name="phone" id="phone" placeholder="Phone Number" required>
+                        <input type="tel" class="form-control" name="phone_no" id="phone" placeholder="Phone Number" required>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Email Address" required>
+                        <input type="email" class="form-control" name="email_address" id="email" placeholder="Email Address" required>
                     </div>
                     <div class="form-group mt-3">
                         <input type="text" class="form-control" name="address" id="address" placeholder="Address" required>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="State/Country" required>
+                        <input type="text" class="form-control" name="state_country" id="subject" placeholder="State/Country" required>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Name of Bank" required>
+                        <input type="text" class="form-control" name="bank" id="subject" placeholder="Name of Bank" required>
                     </div>
                     <div class="form-group mt-3">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Loan Amount (In Naira)" required>
+                        <input type="text" class="form-control" name="loan" id="subject" placeholder="Loan Amount (In Naira)" required>
                     </div>
                     <div class="form-group mt-3">
-                        <textarea class="form-control" name="message" rows="5" placeholder="Purpose" required></textarea>
+                        <textarea class="form-control" name="purpose" rows="5" placeholder="Purpose" required></textarea>
                     </div>
                     <div class="my-3">
-                        <div class="loading">Loading</div>
-                        <div class="error-message"></div>
-                        <div class="sent-message">Your message has been sent. Thank you!</div>
+                      <p id="contact-message" class="fs-6"></p>
                     </div>
                     <div class="text-center"><button type="submit">Apply Now</button></div>
                 </form>
@@ -161,8 +159,8 @@
             <h4>Our Company</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="apply-now.html">Loan Application</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms & Condition</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="terms-condition.html">Terms & Condition</a></li>
             </ul>
           </div>
 
