--- a/contact.html
+++ b/contact.html
@@ -106,28 +106,30 @@
                 </div>
     
                 <div class="col-lg-12">
-                <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                  <form action="" method="post" role="form" class="php-email-form" id="contact-form">
                     <div class="row">
-                    <div class="col-md-6 form-group">
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="col-md-6 form-group mt-3 mt-md-0">
-                        <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                    </div>
-                    </div>
-                    <div class="form-group mt-3">
-                    <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                      <div class="col-md-6 form-group">
+                        <input type="text" name="user_name" class="form-control" id="name" placeholder="Your Name" required>
+                      </div>
+                      <div class="col-md-6 form-group mt-3 mt-md-0">
+                        <input type="email" class="form-control" name="user_email" id="email" placeholder="Your Email" required>
+                      </div>
                     </div>
                     <div class="form-group mt-3">
-                    <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                      <input type="text" class="form-control" name="user_subject" id="subject" placeholder="Subject" required>
+                    </div>
+                    <div class="form-group mt-3">
+                      <textarea class="form-control" name="user_message" rows="5" placeholder="Message" required></textarea>
+                    </div>
+                    <div class="form-group d-none">
+                      <input type="text" class="form-control" name="first_name">
+                      <div class="validate"></div>
                     </div>
                     <div class="my-3">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
+                      <p id="contact-message" class="fs-6"></p>
                     </div>
                     <div class="text-center"><button type="submit">Send Message</button></div>
-                </form>
+                  </form>
                 </div>
     
             </div>
@@ -173,8 +175,8 @@
             <h4>Our Company</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="apply-now.html">Loan Application</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms & Condition</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="terms-condition.html">Terms & Condition</a></li>
             </ul>
           </div>
 
