Final changes without form done

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,8 @@
                     <div class="info-box mt-4">
                         <i class="bx bx-phone-call"></i>
                         <h3>Call Us</h3>
-                        <p>+234 123 1234 123</p>
+                        <p>09049371418</p>
+                        <p>09048185681</p>
                     </div>
                     </div>
                 </div>
@@ -156,7 +157,7 @@
               Suite 13,Purple Stone Plaza. <br>
               Apo Resettlement,<br>
               Abuja, Nigeria. <br><br>
-              <strong>Phone:</strong> +234 123 1234 123<br>
+              <strong>Phone:</strong> 09049371418,  09048185681 <br>
               <strong>Email:</strong> zykascreditlimited@gmail.com  <br>
             </p>
           </div>
