--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Cta Section ======= -->
+    <!-- ======= Loan Application Cta Section ======= -->
     <section id="cta" class="cta">
       <div class="container">
 
@@ -258,10 +258,10 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I can't express how grateful I am for the support I received from Zyka Credit. They not only provided me with a loan tailored to my needs but also guided me through every step of the process. Their 24/7 availability was a lifesaver during a recent financial crisis.
+                    Investing with Zyka Credit has been a seamless experience. Their professional guidance gave me the confidence to expand my financial opportunities.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Chuka Nwaneli</h3>
+                <h3>Mrs. Roseline Onyekwere</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -269,10 +269,10 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  As a small business owner, I've had my fair share of financial ups and downs. Zyka Credit has been my trusted partner throughout this journey. Their expertise in customized financing solutions helped my business thrive during tough times.
+                    I trust Zyka Credit to handle my investments with care and precision. Their returns have exceeded my expectations every time.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Olawale David</h3>
+                <h3>Mr Nwodo Osita</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -280,10 +280,10 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I was impressed by Zyka Credit's commitment to advanced technology. The online application process was seamless and secure. As someone who values convenience and security, I felt at ease throughout the entire loan application.
+                    Zyka Credit has simplified my investment journey, offering excellent returns and a team that truly cares about my financial well-being.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Okafor James</h3>
+                <h3>Mrs Uju</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -291,10 +291,10 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  This is my third loan with Zyka Credit, and they never disappoint. Their flexible terms and attentive service keep me coming back. I highly recommend their services to anyone seeking financial support.
+                    I'm impressed by Zyka Credit's professional approach. Their investment plans have been profitable, and I'm confident in their services.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Kamsi Umeh</h3>
+                <h3>Mr Samuel</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -302,10 +302,10 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I was skeptical about getting a loan until I found Zyka Credit. Their team's professionalism and personalized approach made the process smooth and stress-free. I'm impressed by their commitment to excellence!
+                    Zyka Credit offers reliable and secure investment options. I've experienced steady growth and peace of mind knowing my funds are in good hands.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <h3>Bolatito Adegoke</h3>
+                <h3>Bar Ndubueze Okpala</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -352,7 +352,8 @@
                 <div class="info-box mt-4">
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
-                  <p>+234 123 1234 123</p>
+                  <p>09049371418</p>
+                  <p>09048185681</p>
                 </div>
               </div>
             </div>
@@ -391,6 +392,21 @@
       </div>
     </section><!-- End Contact Section -->
 
+    <!-- ======= Apply for job Cta Section ======= -->
+    <section id="cta" class="cta">
+      <div class="container">
+
+        <div class="text-center">
+          <h3>Employment Ongoing: Marketing Position</h3>
+          <p>
+            Join our dynamic team and drive growth with your marketing expertise. Apply through our mail to be part of our success story!
+          </p>
+          <a class="cta-btn" href="contact.html">Contact Us</a>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -408,7 +424,7 @@
               Suite 13,Purple Stone Plaza. <br>
               Apo Resettlement,<br>
               Abuja, Nigeria. <br><br>
-              <strong>Phone:</strong> +234 123 1234 123<br>
+              <strong>Phone:</strong> 09049371418,  09048185681 <br>
               <strong>Email:</strong> zykascreditlimited@gmail.com  <br>
             </p>
           </div>
