--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -236,7 +236,7 @@
               Suite 13,Purple Stone Plaza. <br>
               Apo Resettlement,<br>
               Abuja, Nigeria. <br><br>
-              <strong>Phone:</strong> +234 123 1234 123<br>
+              <strong>Phone:</strong> 09049371418,  09048185681 <br>
               <strong>Email:</strong> zykascreditlimited@gmail.com  <br>
             </p>
           </div>
