Final changes without form done

--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
 
           <div class="col-lg-4 col-md-6 footer-contact">
             <a href="index.html">
-              <img src="/Baker/assets/img/zyka/Group 18.png" alt="" class="logo">
+              <img src="assets/img/zyka/Group 18.png" alt="Company's Logo" class="logo">
             </a>
             <p class="mt-3">
               Suite 13,Purple Stone Plaza. <br>
