--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
           <div class="col-lg-4 col-md-6 footer-contact">
             <a href="index.html">
-              <img src="assets/img/zyka/Group 18.png" alt="" class="logo">
+              <img src="assets/img/zyka/Group 18.png" alt="Company's Logo" class="logo">
             </a>
             <p class="mt-3">
               Suite 13,Purple Stone Plaza. <br>
