new updated commit

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
               <div class="icon">
                 <i class="bi bi-cash-coin"></i>
               </div>
-              <h4><a href="">Loans</a></h4>
+              <h4><a href="">SME Loans</a></h4>
               <p>
-                Your financial goals, our commitment. Secure the funds you need with our tailored personal loans and flexible repayment plans.
+                Fuel your business growth with tailored loan options for small and medium enterprises. Flexible terms and competitive rates.
               </p>
             </div>
           </div>
@@ -166,11 +166,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
-                <i class="bi bi-graph-up"></i>
+                <i class="bi bi-credit-card-2-front"></i>
               </div>
-              <h4><a href="">Investment </a></h4>
+              <h4><a href="">Salary Loans</a></h4>
               <p>
-                Grow your wealth, secure your future. Our expert advice and diversified investment portfolios pave the way to your financial success with Zyka Credit.
+                Quick and easy salary advances to cover your needs before payday. Fast approval and low interest.
               </p>
             </div>
           </div>
@@ -178,11 +178,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-pink">
               <div class="icon">
-                <i class="bx bx-tachometer"></i>
+                <i class="bi bi-person"></i>
               </div>
-              <h4><a href="">Buy and Pay Small Small</a></h4>
+              <h4><a href="">Personal Loan</a></h4>
               <p>
-                Big purchases, small worries. Shop without stress, thanks to our convenient installment plans that fit your budget.
+                Personal loans provide funds for various needs, like travel or emergencies.
               </p>
             </div>
           </div>
@@ -190,11 +190,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-yellow">
               <div class="icon">
-                <i class="bi bi-book"></i>
+                <i class="bi bi-diagram-3"></i>
               </div>
-              <h4><a href="">Account Openings</a></h4>
+              <h4><a href="">Agricultural Loans</a></h4>
               <p>
-                Banking made easy. Open an account with Zyka Credit and, manage finances online, and experience security and convenience like never before.
+                Agricultural loans support farmers and agribusinesses with funding for seeds, equipment, livestock, and other farming needs.
               </p>
             </div>
           </div>
@@ -204,9 +204,9 @@
               <div class="icon">
                 <i class="bi bi-bank"></i>
               </div>
-              <h4><a href="">Business Loans</a></h4>
+              <h4><a href="">Group Loan</a></h4>
               <p>
-                Fueling your business dreams. Our customized financing solutions and dedicated support empower entrepreneurs to thrive and expand. 
+                Group loans are for cooperatives or associations, offering shared funds and responsibility.
               </p>
             </div>
           </div>
@@ -214,11 +214,11 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box iconbox-teal">
               <div class="icon">
-                <i class="bi bi-card-checklist"></i>
+                <i class="bi bi-backpack4"></i>
               </div>
-              <h4><a href="">Proof of Funds</a></h4>
+              <h4><a href="">Educational Loan</a></h4>
               <p>
-                Gain credibility and confidence with our verification services for financial transactions.
+                Educational loans cover tuition, books, and academic expenses, offering flexible repayment and competitive rates.
               </p>
             </div>
           </div>
@@ -242,79 +242,6 @@
 
       </div>
     </section><!-- End Cta Section -->
-
-    <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Testimonials</h2>
-        </div>
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Investing with Zyka Credit has been a seamless experience. Their professional guidance gave me the confidence to expand my financial opportunities.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <h3>Mrs. Roseline Onyekwere</h3>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I trust Zyka Credit to handle my investments with care and precision. Their returns have exceeded my expectations every time.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <h3>Mr Nwodo Osita</h3>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Zyka Credit has simplified my investment journey, offering excellent returns and a team that truly cares about my financial well-being.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <h3>Mrs Uju</h3>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I'm impressed by Zyka Credit's professional approach. Their investment plans have been profitable, and I'm confident in their services.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <h3>Mr Samuel</h3>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Zyka Credit offers reliable and secure investment options. I've experienced steady growth and peace of mind knowing my funds are in good hands.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-                <h3>Bar Ndubueze Okpala</h3>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -353,7 +280,7 @@
                   <i class="bx bx-phone-call"></i>
                   <h3>Call Us</h3>
                   <p>09049371418</p>
-                  <p>09048185681</p>
+                  <p>08187052728</p>
                 </div>
               </div>
             </div>
@@ -424,7 +351,7 @@
               Suite 13,Purple Stone Plaza. <br>
               Apo Resettlement,<br>
               Abuja, Nigeria. <br><br>
-              <strong>Phone:</strong> 09049371418,  09048185681 <br>
+              <strong>Phone:</strong> 09049371418,  08187052728 <br>
               <strong>Email:</strong> zykascreditlimited@gmail.com  <br>
             </p>
           </div>
